@@ -54,6 +54,8 @@
 #include "frame-base.h"
 #include "trad-frame.h"
 
+static const struct objfile_data *mips_pdr_data;
+
 static void set_reg_offset (CORE_ADDR *saved_regs, int regnum, CORE_ADDR off);
 static struct type *mips_register_type (struct gdbarch *gdbarch, int regnum);
 
@@ -2298,7 +2300,7 @@ non_heuristic_proc_desc (CORE_ADDR pc, CORE_ADDR *addrptr)
   sec = find_pc_section (pc);
   if (sec != NULL)
     {
-      priv = (struct mips_objfile_private *) sec->objfile->obj_private;
+      priv = (struct mips_objfile_private *) objfile_data (sec->objfile, mips_pdr_data);
 
       /* Search the ".pdr" section generated by GAS.  This includes most of
          the information normally found in ECOFF PDRs.  */
@@ -2316,7 +2318,7 @@ non_heuristic_proc_desc (CORE_ADDR pc, CORE_ADDR *addrptr)
 	  priv = obstack_alloc (&sec->objfile->objfile_obstack,
 				sizeof (struct mips_objfile_private));
 	  priv->size = 0;
-	  sec->objfile->obj_private = priv;
+	  set_objfile_data (sec->objfile, mips_pdr_data, priv);
 	}
       else if (priv == NULL)
 	{
@@ -2344,7 +2346,7 @@ non_heuristic_proc_desc (CORE_ADDR pc, CORE_ADDR *addrptr)
 	  else
 	    priv->size = 0;
 
-	  sec->objfile->obj_private = priv;
+	  set_objfile_data (sec->objfile, mips_pdr_data, priv);
 	}
       the_bfd = NULL;
 
@@ -6069,6 +6071,8 @@ _initialize_mips_tdep (void)
     internal_error (__FILE__, __LINE__, "mips_abi_strings out of sync");
 
   gdbarch_register (bfd_arch_mips, mips_gdbarch_init, mips_dump_tdep);
+
+  mips_pdr_data = register_objfile_data ();
 
   /* Add root prefix command for all "set mips"/"show mips" commands */
   add_prefix_cmd ("mips", no_class, set_mips_command,
